crates/validation/tests/snapshots/field_selection_conflicts__disable_binding.snap
---
source: crates/validation/tests/field_selection_conflicts.rs
expression: "(selections, errors)"
---
(
    [
        (
            [],
            Some(
                MaterializationDef {
                    source: None,
                    target_naming: None,
                    on_incompatible_schema_change: DisableBinding,
                    endpoint: Connector(
                        ConnectorConfig {
                            image: "an/image:test",
                            config: RawValue(
                                {},
                            ),
                        },
                    ),
                    secrets: {},
                    vmm: false,
                    bindings: [
                        MaterializationBinding {
                            resource: RawValue(
                                {"_meta":{"path":["a"]},"table":"a"},
                            ),
                            source: Collection(
                                Collection(
                                    "the/collection",
                                ),
                            ),
                            disable: true,
                            priority: 0,
                            fields: MaterializationFields {
                                group_by: [],
                                require: {},
                                exclude: [],
                                recommended: Usize(
                                    1,
                                ),
                            },
                            backfill: 0,
                            on_incompatible_schema_change: None,
                        },
                    ],
                    shards: ShardTemplate {
                        disable: false,
                        min_txn_duration: None,
                        max_txn_duration: None,
                        hot_standbys: None,
                        ring_buffer_size: None,
                        read_channel_size: None,
                        shuffle_disk_limit: None,
                        log_level: None,
                        flags: {},
                    },
                    expect_pub_id: None,
                    triggers: None,
                    sync_schedule: None,
                    delete: false,
                    reset: false,
                },
            ),
            [
                "disabling binding [\"a\"] due to incompatible field selection (onIncompatibleSchemaChange: disableBinding)",
            ],
        ),
    ],
    [],
)
